Adds chat filter based on client
